# pyShinyMappeR

./: .gitignore  README.md  flake.nix  justfile  main.py  outline.md  pyproject.toml  test.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
Clusterers/: dbscan.py  single_linkage.py
Coverers/: width_balanced.py
Datasets/: circle.py  spiral.py
Helpers/: loader.py  param.py  results.py  server.py  ui_builder.py  ui_controller.py
Lenses/: pca_projection.py  theta_projection.py
Visualizations/: 00_test_plotly.py  01_scatter.py  02_mapper_graph.py  03_cover_element_view.py  04_scatter_cover_view.py  animation_test.py  cover_element_view.py  mapper_graph.py  scatter.py  scatter_cover_view.py
docs/paper/: main.tex
docs/paper/sections/: abstract.tex  introduction.tex
