[project]
name = "pyShinyMappeR"
version = "0.1.0"
requires-python = ">=3.12"

dependencies = [
    "shiny",
    "numpy",
    "pandas",
    "scikit-learn",       # clustering algorithms
    "networkx",           # graph manipulation
    "zen-mapper",         # Python mapper backend
    "rpy2",               # R <-> Python bridge
    "plotly",             # interactive graph viz
    "faicons",            # icon support for shiny
    "umap-learn",
    "matplotlib>=3.10.8",
    "kaiju-mapper>=0.1.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",     # for testing shiny reactive logic
    "ruff",
    "pyright",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
